--- a/pstdrl/pom.xml
+++ b/pstdrl/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>payrolldemo</artifactId>
   <version>1.0</version>
   <packaging>kjar</packaging>
-  <name>payrolldemo</name>
+  <name>pstdrl</name>
   <dependencies>
     <dependency>
       <groupId>upsdemos</groupId>
