--- a/payrollDemoGuidedRules/pom.xml
+++ b/payrollDemoGuidedRules/pom.xml
@@ -7,6 +7,14 @@
   <version>1.0</version>
   <packaging>kjar</packaging>
   <name>payrollDemoGuidedRules</name>
+  <dependencies>
+    <dependency>
+      <groupId>upsdemos</groupId>
+      <artifactId>domainModel</artifactId>
+      <version>1.6</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
   <repositories>
     <repository>
       <id>guvnor-m2-repo</id>
